compiler/testData/readJavaBinaryClass/kotlinSignature/error/ExtraUpperBound.kt
package test

import java.util.*

public open class ExtraUpperBound : Object() {
    public open fun <A : Runnable?> foo() : String? {
        throw UnsupportedOperationException()
    }
}
